--- a/src/index.css
+++ b/src/index.css
@@ -9,22 +9,23 @@
   box-sizing: border-box;
   outline-style: none;
 }
+ul {
+  list-style: none;
+}
 a {
+  color: #000;
   text-decoration: none;
 }
 img {
   vertical-align: middle;
   border: 0;
 }
-ul {
-  list-style: none;
-}
 html {
   font-size: 16px;
 }
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #000;
   line-height: 1.4;
   letter-spacing: -0.3px;
